<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
    <RelativeLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/layout_padding">

        <LinearLayout
                android:id="@+id/LoginUsernameLinearLayout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/login_passing">
            <TextView
                    android:text="@string/userid"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom|fill_horizontal"/>
            <EditText
                    android:id="@+id/enterUserID"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            <Button
                    android:id="@+id/submitUserId"
                    android:text="@string/submit"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:buttonBarButtonStyle"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/LoginPasswordLinearLayout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/LoginUsernameLinearLayout"
                android:padding="@dimen/login_passing">
            <TextView
                    android:text="@string/password"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom|fill_horizontal"/>
            <EditText
                    android:id="@+id/enterPassword"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:inputType="textPassword"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            <Button
                    android:id="@+id/cancelLogin"
                    android:text="@string/cancel"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:buttonBarButtonStyle"/>
        </LinearLayout>

        <View
                android:id="@+id/seperatorBar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/seperatorHeight"
                android:background="@color/black"
                android:layout_below="@id/LoginPasswordLinearLayout"/>

        <TextView
                android:id="@+id/forgotLoginTextView"
                android:text="@string/forgotLogin"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="@dimen/login_passing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/seperatorBar"/>

        <LinearLayout
                android:id="@+id/cellNumberLinearLayout"
                android:orientation="horizontal"
                android:padding="@dimen/login_passing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forgotLoginTextView">
            <EditText
                    android:id="@+id/enterPhoneNumber"
                    android:hint="@string/enterPhoneNumber"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"/>
            <Button
                    android:id="@+id/submitPhoneNumber"
                    android:text="@string/recover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:buttonBarButtonStyle"/>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>